--- a/Navigation Bar/Base.lproj/Main.storyboard
+++ b/Navigation Bar/Base.lproj/Main.storyboard
@@ -1,25 +1,93 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Navigation_Bar" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OD9-eF-NrG">
+                                <rect key="frame" x="-4" y="10" width="383" height="44"/>
+                                <items>
+                                    <navigationItem title="Navigation Bar" id="8PK-fx-XcT">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="w3D-ah-eoS"/>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="qrN-ra-AbT"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" text="0" textAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="mu2-aF-6yM">
+                                <rect key="frame" x="125" y="276" width="124" height="95"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="95" id="Sdv-Xg-wR1"/>
+                                    <constraint firstAttribute="width" constant="124" id="fwa-XF-mjb"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="80"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6wA-mm-5d0">
+                                <rect key="frame" x="81" y="480" width="64" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="VJS-K6-KFm"/>
+                                    <constraint firstAttribute="height" constant="48" id="eqh-F8-v1H"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zpN-xx-27f"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NCk-Dn-6Q9">
+                                <rect key="frame" x="239" y="480" width="62" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="62" id="Aj4-ms-Wtw"/>
+                                    <constraint firstAttribute="height" constant="48" id="KCQ-Ld-MCR"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Stop">
+                                    <color key="titleColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xsp-js-9wY"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="NCk-Dn-6Q9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="6gN-U5-0Cu"/>
+                            <constraint firstItem="OD9-eF-NrG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="10" id="9ha-QJ-RBL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="OD9-eF-NrG" secondAttribute="trailing" constant="-20" id="Cf5-Ij-gjw"/>
+                            <constraint firstItem="NCk-Dn-6Q9" firstAttribute="top" secondItem="mu2-aF-6yM" secondAttribute="bottom" constant="109" id="IkG-dj-o4w"/>
+                            <constraint firstItem="OD9-eF-NrG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="SZ2-b2-cjZ"/>
+                            <constraint firstItem="6wA-mm-5d0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bs8-PC-AdU"/>
+                            <constraint firstItem="mu2-aF-6yM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cLN-1A-XtN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="NCk-Dn-6Q9" secondAttribute="trailing" constant="54" id="h3D-Ex-rif"/>
+                            <constraint firstItem="mu2-aF-6yM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jlh-lC-rHT"/>
+                            <constraint firstItem="6wA-mm-5d0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="q45-Yu-n5Y"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="timeDisplay" destination="mu2-aF-6yM" id="LQ5-Ga-jjf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="284.5" y="314.5"/>
         </scene>
     </scenes>
 </document>
