--- a/Navigation Bar/Base.lproj/Main.storyboard
+++ b/Navigation Bar/Base.lproj/Main.storyboard
@@ -65,10 +65,25 @@
                                     <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xsp-js-9wY"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Doi-DA-v74">
+                                <rect key="frame" x="121" y="536" width="133" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Gwz-QS-9ah"/>
+                                    <constraint firstAttribute="width" constant="133" id="s2n-SA-8Am"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                <state key="normal" title="Reset">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="reset:" destination="BYZ-38-t0r" eventType="touchUpInside" id="nJO-eq-vVw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="NCk-Dn-6Q9" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="6gN-U5-0Cu"/>
+                            <constraint firstItem="Doi-DA-v74" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6qa-Gz-Hpc"/>
                             <constraint firstItem="OD9-eF-NrG" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="10" id="9ha-QJ-RBL"/>
                             <constraint firstAttribute="trailingMargin" secondItem="OD9-eF-NrG" secondAttribute="trailing" constant="-20" id="Cf5-Ij-gjw"/>
                             <constraint firstItem="NCk-Dn-6Q9" firstAttribute="top" secondItem="mu2-aF-6yM" secondAttribute="bottom" constant="109" id="IkG-dj-o4w"/>
@@ -76,6 +91,7 @@
                             <constraint firstItem="6wA-mm-5d0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="bs8-PC-AdU"/>
                             <constraint firstItem="mu2-aF-6yM" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="cLN-1A-XtN"/>
                             <constraint firstAttribute="trailingMargin" secondItem="NCk-Dn-6Q9" secondAttribute="trailing" constant="54" id="h3D-Ex-rif"/>
+                            <constraint firstItem="Doi-DA-v74" firstAttribute="top" secondItem="NCk-Dn-6Q9" secondAttribute="bottom" constant="8" id="hfr-CV-9TX"/>
                             <constraint firstItem="mu2-aF-6yM" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jlh-lC-rHT"/>
                             <constraint firstItem="6wA-mm-5d0" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="60" id="q45-Yu-n5Y"/>
                         </constraints>
